// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationDomain has the same initial nullable properties 1`] = `
OrganizationDomain {
  "affiliationEmailAddress": null,
  "attemptAffiliationVerification": [Function],
  "delete": [Function],
  "enrollmentMode": "manual_invitation",
  "id": "test_domain_id",
  "name": "clerk.dev",
  "organizationId": "test_org_id",
  "pathRoot": "",
  "prepareAffiliationVerification": [Function],
  "update": [Function],
  "verification": null,
}
`;

exports[`OrganizationDomain has the same initial properties 1`] = `
OrganizationDomain {
  "affiliationEmailAddress": "some@clerk.dev",
  "attemptAffiliationVerification": [Function],
  "delete": [Function],
  "enrollmentMode": "manual_invitation",
  "id": "test_domain_id",
  "name": "clerk.dev",
  "organizationId": "test_org_id",
  "pathRoot": "",
  "prepareAffiliationVerification": [Function],
  "update": [Function],
  "verification": {
    "attempts": 1,
    "expiresAt": 1970-01-01T00:00:12.345Z,
    "status": "verified",
    "strategy": "email_code",
  },
}
`;
